--- a/CvSite.Web/Views/Shared/_Layout.cshtml
+++ b/CvSite.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-controller="Messages"
+                               asp-action="Index">
+                                Messages
+                            </a>
+                        </li>
+                        @if (User.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nav-item">
+                                @await Component.InvokeAsync("UnreadMessages")
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
