--- a/CvSite.Web/Views/Messages/Index.cshtml
+++ b/CvSite.Web/Views/Messages/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CvSite.Web.Models.Message>
+﻿@using CvSite.Web.Data.Entities
+@model IEnumerable<Message>
 
 <h2>Messages</h2>
 
