--- a/CvSite.Web/Views/Shared/_Layout.cshtml
+++ b/CvSite.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Cv" asp-action="Index">Sök CV</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Projects" asp-action="Index">Projects</a>
+                        </li>
 
                         @if (User.Identity?.IsAuthenticated ?? false)
                         {
