--- a/CvSite.Web/Views/Profile/Edit.cshtml
+++ b/CvSite.Web/Views/Profile/Edit.cshtml
@@ -7,7 +7,14 @@
       asp-controller="Profile"
       method="post">
 
+<form asp-action="Edit"
+      asp-controller="Profile"
+      method="post"
+      enctype="multipart/form-data">
+
     @Html.AntiForgeryToken()
+
+    <div asp-validation-summary="All" class="text-danger mb-3"></div>
 
     <div class="mb-3">
         <label asp-for="FirstName"></label>
@@ -27,6 +34,14 @@
     <div class="form-check mb-3">
         <input asp-for="IsPrivate" class="form-check-input" />
         <label asp-for="IsPrivate" class="form-check-label"></label>
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Profile picture</label>
+        <input type="file"
+               name="ProfileImage"
+               class="form-control"
+               accept="image/*" />
     </div>
 
     <button type="submit" class="btn btn-primary">
