--- a/CvSite.Web/Views/Shared/_Layout.cshtml
+++ b/CvSite.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Cv" asp-action="Index">Sök CV</a>
+                            <a class="nav-link text-dark" asp-controller="Cv" asp-action="MyPage">My Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cv" asp-action="Index">Search CV</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Projects" asp-action="Index">Projects</a>
