--- a/CvSite.Web/Views/Competences/Index.cshtml
+++ b/CvSite.Web/Views/Competences/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CvSite.Web.Data.Entities.Competence>
+﻿@model IEnumerable<CvSite.Data.Entities.Competence>
 
 <h2>My competences</h2>
 
