--- a/CvSite.Web/Views/Cv/Details.cshtml
+++ b/CvSite.Web/Views/Cv/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CvSite.Web.Models.CvViewModel
 @using Microsoft.AspNetCore.Identity
-@inject UserManager<CvSite.Web.Data.Entities.ApplicationUser> UserManager
+@inject UserManager<CvSite.Data.Entities.ApplicationUser> UserManager
 
 @{
     ViewData["Title"] = "CV Details";
