--- a/CvSite.Web/Views/Cv/Index.cshtml
+++ b/CvSite.Web/Views/Cv/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CvSite.Web.Data.Entities.ApplicationUser>
+﻿@model IEnumerable<CvSite.Data.Entities.ApplicationUser>
 
 @{
     ViewData["Title"] = "Search CV";
