--- a/CvSite.Web/Views/Educations/Index.cshtml
+++ b/CvSite.Web/Views/Educations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CvSite.Web.Data.Entities.Education>
+﻿@model IEnumerable<CvSite.Data.Entities.Education>
 
 <h2>My education</h2>
 
