--- a/CvSite.Web/Views/Experiences/Index.cshtml
+++ b/CvSite.Web/Views/Experiences/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CvSite.Web.Data.Entities.Experience>
+﻿@model IEnumerable<CvSite.Data.Entities.Experience>
 
 <h2>Work experience</h2>
 
