--- a/CvSite.Web/Views/Projects/Details.cshtml
+++ b/CvSite.Web/Views/Projects/Details.cshtml
@@ -1,6 +1,6 @@
-﻿@using CvSite.Web.Data.Entities
+﻿@using CvSite.Data.Entities
 @using Microsoft.AspNetCore.Identity
-@model CvSite.Web.Data.Entities.Project
+@model CvSite.Data.Entities.Project
 @inject UserManager<ApplicationUser> UserManager
 
 @{
