--- a/CvSite.Web/Views/Projects/Index.cshtml
+++ b/CvSite.Web/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CvSite.Web.Data.Entities.Project>
+﻿@model IEnumerable<CvSite.Data.Entities.Project>
 
 <div class="container">
     <h2>All Projects</h2>
