--- a/CvSite.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/CvSite.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using CvSite.Web.Areas.Identity
 @using CvSite.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using CvSite.Web.Data.Entities
+@using CvSite.Data.Entities
