--- a/CvSite.Web/Views/Messages/Index.cshtml
+++ b/CvSite.Web/Views/Messages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using CvSite.Web.Data.Entities
+﻿@using CvSite.Data.Entities
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> UserManager
 @model IEnumerable<Message>
