--- a/CvSite.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CvSite.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CvSite.Web.Data.Entities
+@using CvSite.Data.Entities
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
